lander.lessons.lander.lvl1_lander_101.Lander101.scala.error
Lander:2: error: Missing closing brace `}' assumed here
if(getVitesseY()<=-10){
^